[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "ipykernel>=7.0.1",
    "polars>=1.34.0",
    "revisitpy>=2.2.1",
    "revisitpy-server>=1.10.0",
    "scipy>=1.16.3",
    "vl-convert-python>=1.8.0",
]
